# Toot

./: .gitignore  Cargo.toml  README.md  mastodon.toml.origin
src/: main.rs
