[package]
name = "toot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
toml = "0.5.8"
anyhow = "1.0.53"
clap = { version = "3.0.0-rc.11", features = ["derive"] }
serde = { version = "^1.0.101", features = ["derive"] }
serde_json = "1.0.78"
reqwest = { version = "0.11", features = ["blocking", "json"] }


